<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageViewMessageAllPlayerActivity"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPresentationMessageAllPlayerActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_imagefootball_foreground" />

    <TextView
        android:id="@+id/textViewPresentationMessageAllPlayerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presentation"
        android:textSize="40sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewPres2MessageAllPlayerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presbottom"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:id="@+id/textMessageAllPlayerActivityEsterna"
            android:hint="@string/textmessage"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:textAlignment="textStart"
                android:id="@+id/textMessageAllPlayerActivity"
                android:inputType="textEmailAddress"
                android:gravity="start">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:onClick="checkmessageOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:backgroundTint="@color/green_700"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="back"
            android:background="@drawable/two_state_button"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            android:elevation="0dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/descrmessage" />

    </LinearLayout>

</LinearLayout>