<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/insert_data"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_imagefootball_foreground"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/insert_name"
                android:paddingBottom="10dp"
                android:id="@+id/namePlayerEsterna">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namePlayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/insert_surname"
                android:id="@+id/surnamePlayerEsterna">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnamePlayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/insert_databirth"
        android:id="@+id/dataPlayerEsterna">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dataPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/insert_phone"
        android:id="@+id/phonePlayerEsterna">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phonePlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/insert_role"
        android:id="@+id/ruoloPlayerEsterna">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ruoloPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="ID"
        android:id="@+id/numeromagliaPlayerEsterna">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numeromagliaPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/insert_results"
        android:id="@+id/resultsPlayerEsterna">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resultsPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/insert_certification"
        android:id="@+id/certificationPlayerEsterna">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/certificationPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/two_state_button"
        android:text="@string/add"
        android:layout_marginBottom="1dp"
        android:onClick="checkAdd"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="INDIETRO"
        android:onClick="onReturn"
        android:backgroundTint="@color/green_700"/>

</LinearLayout>